--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
 <body>
   <div class="mainsignon">
-    Sup dude
+    <div class="loginbox">
+      Please enter your login credentials:
+      Username:
+      Password:
+    </div>
   </div>
 
   <script src="index.js"></script>
